--- a/lesson-2-ansible-roles-and-templates/exercises/exercise-1/roles/solution/common/tasks/main.yml
+++ b/lesson-2-ansible-roles-and-templates/exercises/exercise-1/roles/solution/common/tasks/main.yml
@@ -9,7 +9,7 @@
     state: started
 
 - name: Open port 
-  firewalld:
+  ansible.posix.firewalld:
     port: "{{ port }}/tcp"
     state: enabled
     permanent: true
